// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapArea renders a map centered and with a marker at the photo's location if it has one 1`] = `
<div
  style={
    Object {
      "height": "50%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <GoogleMapReact
    center={
      Object {
        "lat": 52,
        "lng": 36.2,
      }
    }
    zoom={5}
  >
    <FiMapPin
      lat={52}
      lng={36.2}
      style={
        Object {
          "color": "crimson",
          "height": "24px",
          "left": "-12px",
          "position": "relative",
          "top": "-24px",
          "width": "24px",
        }
      }
    />
  </GoogleMapReact>
</div>
`;

exports[`MapArea renders a map centered at (0,0) if no photo prop is set 1`] = `
<div
  style={
    Object {
      "height": "50%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <GoogleMapReact
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    zoom={5}
  />
</div>
`;

exports[`MapArea renders a map centered at (0,0) if the photo has no location 1`] = `
<div
  style={
    Object {
      "height": "50%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <GoogleMapReact
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    zoom={5}
  />
</div>
`;
